--- a/views/includes/sidebar.jade
+++ b/views/includes/sidebar.jade
@@ -1,8 +1,8 @@
 h2.heading Quick links
 ul
 	li 
-		a(href='#') link1
+		a(href='/register') Register
 	li 
-		a(href='#') link2
+		a(href='/login') Login
 	li
-		a(href='#') link3
+		a(href='/') Logout
