--- a/views/login.jade
+++ b/views/login.jade
@@ -1,9 +1,5 @@
 div.hero-unit
-	h1= "title"
-	p Welcome to
-	p 
-		a(href='#', class='btn primary large') Learn more »
-
+	h2 Welcome to
 div.row
 	div.span6.columns
 		include includes/sidebar
