--- a/views/includes/head.jade
+++ b/views/includes/head.jade
@@ -8,6 +8,8 @@ div.topbar-wrapper
 					li.active
 						a(href='/') Home
 					li
+						a(href='/pages') Pages
+					li
 						a(href='/') About
 					li
 						a(href='/') Contact
@@ -35,5 +37,6 @@ div.topbar-wrapper
 									a(href='/profile') settings
 								li
 									a(href='/logout') logout
+								li.divider
 								li
 									a(href='/help') help
