--- a/views/layout.jade
+++ b/views/layout.jade
@@ -15,5 +15,5 @@ html(lang="en")
 		script(src="/js/application.js")
 	body
 		include includes/head
-		div.container!= body
+		div#content-wrapper.container!= body
 		include includes/tail
