--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,15 +1,17 @@
+- if (typeof title == "undefined")
+	- var title = "home"
 !!! 5
 html(lang="en")
 	head
-		title NodeJS MongoDB CMS
+		title= title + "- NodeJS MongoDB CMS"
 		link(rel='stylesheet', href='/stylesheets/style.css')
 		link(rel='stylesheet', href='/js/google-code-prettify/prettify.css')
 		link(rel='apple-touch-icon', href='/imgs/apple-touch-icon.png')
 		link(rel='apple-touch-icon', sizes='72x72', href='/imgs/apple-touch-icon-72x72.png')
-		link(rel='apple-touch-icon', sizes='114x114', href='/imgs/apple-touch-icon-114x114.png')		
+		link(rel='apple-touch-icon', sizes='114x114', href='/imgs/apple-touch-icon-114x114.png')
 		//if IE
 			script(src="http://html5shim.googlecode.com/svn/trunk/html5.js")
-		script(src='/js/jquery/jquery-1.5.2.min.js')			
+		script(src='/js/jquery/jquery-1.5.2.min.js')
 		script(src="/js/jquery/jquery.tablesorter.min.js")
 		script(src="/js/google-code-prettify/prettify.js")
 		script(src="/js/application.js")
